Bug 511131 - Desktop Icons cannot be placed on non primary screens in multi-monitor setup
Summary: Desktop Icons cannot be placed on non primary screens in multi-monitor setup
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: 6.5.0
Platform: CachyOS Linux
: HI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL: https://invent.kde.org/plasma/plasma-...
Keywords: regression
: 507392 511224 511282 511350 511662 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-10-26 00:32 UTC by alufoliehorst
Modified: 2025-12-07 17:02 UTC (History)
18 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.3
Sentry Crash Report:


Attachments
Screenshot from primary and second monitor (91.41 KB, image/jpeg)
2025-11-03 12:46 UTC, Geraldo Simião
Details

Note You need to log in before you can comment on or make changes to this bug.
Description alufoliehorst 2025-10-26 00:32:09 UTC
SUMMARY
After updating to 6.5.0 all Desktop Icons have been moved from the non primary screens to the Primary screen.
Attempting to move them to a different screen does not work.
Rectangle selection with the mouse also does not work anymore and the context menu does not show any File or Icon related entries when opened on the non primary screen.

While running plasmashell per the Terminal and when dragging an Icon to a different screen two errors appear

"file:///usr/share/plasma/plasmoids/org.kde.desktopcontainment/contents/ui/main.qml:214: TypeError: Cannot read property 'status' of null"

"file:///usr/share/plasma/plasmoids/org.kde.desktopcontainment/contents/ui/FolderViewDropArea.qml:19: TypeError: Value is null and could not be converted to an object"

STEPS TO REPRODUCE
1. Attempt to drag and drop an Icon to a non primary Screen

OBSERVED RESULT
Icon does not get moved to the Screen


EXPECTED RESULT
Icon should be moved to where it was dragged


SOFTWARE/OS VERSIONS
Operating System: CachyOS Linux
KDE Plasma Version: 6.5.0
KDE Frameworks Version: 6.19.0
Qt Version: 6.10.0
Kernel Version: 6.17.0-3-cachyos (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 5600 6-Core Processor
Memory: 32 GiB of RAM (31,3 GiB usable)
Graphics Processor: NVIDIA GeForce RTX 3080

ADDITIONAL INFORMATION
Comment 1 evgeniyharchenko.dev 2025-10-26 09:46:30 UTC
Desktop folder settings on secondary screen do not retain the layout setting. Even though it shows "Folder View", in reality it's set to "Desktop". You can switch it back to "Folder View" again, and it will work until the next Plasma session.
Comment 2 evgeniyharchenko.dev 2025-10-26 12:56:18 UTC
Commit with problem: https://invent.kde.org/plasma/plasma-desktop/-/commit/a4f09e667afa89a74e76c4c803f49760f98f4660
Comment 3 Nate Graham 2025-10-29 18:43:13 UTC
*** Bug 511224 has been marked as a duplicate of this bug. ***
Comment 4 Nate Graham 2025-10-29 20:39:29 UTC
*** Bug 511282 has been marked as a duplicate of this bug. ***
Comment 5 Nate Graham 2025-10-30 15:54:16 UTC
I'm unable to reproduce any of these issues with a multi-screen setup with current git master.
Comment 6 Nate Graham 2025-10-30 16:58:08 UTC
*** Bug 511350 has been marked as a duplicate of this bug. ***
Comment 7 evgeniyharchenko.dev 2025-10-30 21:40:13 UTC
Just tested on latest Unstable Edition. Still can reproduce the bug.
My screen setup:
Monitors: 2
 0: +*HDMI-0 1920/527x1080/296+1440+0  HDMI-0
 1: +DP-1 1440/360x900/225+0+110  DP-1

SOFTWARE/OS VERSIONS:
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 6.5.80
KDE Frameworks Version: 6.20.0
Qt Version: 6.9.2
Kernel Version: 6.14.0-34-generic (64-bit)
Graphics Platform: Wayland
Processors: 8 × AMD Ryzen 3 3300X 4-Core Processor
Memory: 32 GiB of RAM (31.2 GiB usable)
Graphics Processor: NVIDIA GeForce GTX 1660 SUPER
Comment 8 TraceyC 2025-10-30 23:00:00 UTC
I'm also unable to reproduce any of the reported problems on a multi-screen setup with current git master.

Do you have the same problems with a new user with all default settings?
Comment 9 evgeniyharchenko.dev 2025-10-31 12:57:47 UTC
Yes, new user also tested. No result.

In 
> function onScreenUiReadyChanged(screen: int, newLayoutReady: bool) 
I have screen = 0 every time. So 
> if (root.isContainment && root.isFolder && !folderViewLayer.ready && Plasmoid.containment.screen === screen && newLayoutReady) 
always false for all screens except primary.

So, maybe we have some problems here:
https://invent.kde.org/plasma/plasma-workspace/-/commit/f135694cf29bd06caf37f7f92eb842d2277b4f18
Comment 10 evgeniyharchenko.dev 2025-10-31 17:15:43 UTC
I just tested it on the latest live CD (neon-unstable-20251026-1147). The problem is reproducible here as well. So I think it might be a hardware-specific issue. I also ask everyone to specify their monitor setup using: xrandr --listmonitors.
Comment 11 alufoliehorst 2025-10-31 18:30:42 UTC
Updating everything to 6.5.1 did not resolve the issue for me.
Tried out creating a new user, and issue persisted there aswell.
The workaround mentioned switching the Layout setting to "Desktop" and back to "Folder View" does work but only until the next Session

Monitor setup:
❯ xrandr --listmonitors
Monitors: 3
 0: +*DP-1 2560/597x1440/336+1080+362  DP-1
 1: +HDMI-A-1 1080/510x1920/290+0+0  HDMI-A-1
 2: +DP-2 1080/531x1920/299+3640+205  DP-2
Comment 12 Asteroid 2025-10-31 18:35:30 UTC
(In reply to evgeniyharchenko.dev from comment #10)
> using: xrandr --listmonitors.

[asteroid@astertux-pc ~]$ xrandr --listmonitors
Monitors: 2
 0: +*DP-4 2560/700x1440/390+0+0  DP-4
 1: +DP-2 2560/700x1440/390+2560+0  DP-2
Comment 13 alufoliehorst 2025-10-31 18:50:03 UTC
(In reply to evgeniyharchenko.dev from comment #10)
> using: xrandr --listmonitors.

Just in case i also tried connecting a second screen to my laptop and the issue also occurs there

Operating System: CachyOS Linux 
KDE Plasma Version: 6.5.1
KDE Frameworks Version: 6.19.0
Qt Version: 6.10.0
Kernel Version: 6.17.5-2-cachyos (64-bit)
Graphics Platform: Wayland
Processors: 8 × 11th Gen Intel® Core™ i5-1135G7 @ 2.40GHz
Memory: 16 GiB of RAM (15,4 GiB usable)
Graphics Processor: Intel® Iris® Xe Graphics
Manufacturer: HUAWEI
Product Name: KLVDZ-WXX9
System Version: M1010

❯ xrandr --listmonitors
Monitors: 2
 0: +*eDP-1 2160/296x1440/197+2400+0  eDP-1
 1: +HDMI-A-1 2400/640x1350/360+0+0  HDMI-A-1
Comment 14 mrivero 2025-10-31 20:16:34 UTC
I'm still experiencing the issue, and I'm on OpenSuse TumbleWeed:

Operating System: openSUSE Tumbleweed 20251028
KDE Plasma Version: 6.5.0
KDE Frameworks Version: 6.19.0
Qt Version: 6.10.0
Kernel Version: 6.17.5-1-default (64-bit)
Graphics Platform: Wayland
Processors: 24 × AMD Ryzen 9 5900X 12-Core Processor
Memory: 32 GiB of RAM (31.2 GiB usable)
Graphics Processor: NVIDIA GeForce RTX 2060
Manufacturer: ASUS

>xrandr --listmonitors                                                                                                                                                     
Monitors: 3
 0: +*HDMI-A-1 1920/476x1080/267+3640+724  HDMI-A-1
 1: +DP-1 2560/798x1080/334+0+588  DP-1
 2: +HDMI-A-2 1080/510x1920/287+2560+0  HDMI-A-2
Comment 15 evgeniyharchenko.dev 2025-11-01 17:40:39 UTC
So, I tested two other devices, each with different monitors and the latest live CD. In every configuration the same problem occurs.

Monitors: 2
 0: +*eDP-1 1920/294x1080/165+0+0  eDP-1
 1: +HDMI-A-1 1920/527x1080/296+1920+0  HDMI-A-1

Monitors: 2
 0: +*eDP-1 1920/344x1080/193+0+0  eDP-1
 1: +HDMI-A-1 1920/527x1080/296+1920+0  HDMI-A-1

What we can conclude so far:
- Two identical monitors – bug present
- Two different monitors – bug present
- Three different monitors – bug present
- Embedded (laptop) monitor + external monitor – bug present

It seems that any configuration triggers the bug; a normal working setup appears to be the exception rather than the rule. I'm unsure which hardware combinations or additional factors produce a bug‑free experience.

If you have a setup that works without any issues, please share details of your hardware and software setup so we can identify what makes it work.
Comment 16 Asteroid 2025-11-01 19:13:05 UTC
(In reply to evgeniyharchenko.dev from comment #15)
> If you have a setup that works without any issues, please share details of
> your hardware and software setup so we can identify what makes it work.

A friend on the Arch Linux Discord Server I'm on said they've had no issues with icon placement on multimonitor and this is what their specs are:

Operating System: Arch Linux
KDE Plasma Version: 6.5.1
KDE Frameworks Version: 6.19.0
Qt Version: 6.10.0
Kernel Version: 6.17.6-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 5600X 6-Core Processor
Memory: 32 GiB of RAM (31.2 GiB usable)
Graphics Processor: AMD Radeon RX 6600 XT
Comment 17 Geraldo Simião 2025-11-03 12:38:17 UTC
I'm having the same problem here:

Monitors: 2
 0: +*eDP-1 1920/344x1080/194+0+165  eDP-1
 1: +HDMI-A-1 1920/527x1080/296+1920+0  HDMI-A-1

Operating System: Fedora Linux 43
KDE Plasma Version: 6.5.1
KDE Frameworks Version: 6.19.0
Qt Version: 6.10.0
Kernel Version: 6.17.7-300.fc43.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 5700U with Radeon Graphics
Memory: 24 GiB of RAM (22.8 GiB usable)
Graphics Processor: AMD Radeon Graphics
Comment 18 Geraldo Simião 2025-11-03 12:46:24 UTC
Created attachment 186460 [details]
Screenshot from primary and second monitor

I don't know if this is related to this bug here, but when clicking with the right mouse button at the desktop, at primary and second monitor, it shows different menus.
Comment 19 evgeniyharchenko.dev 2025-11-03 15:13:48 UTC
Ok, based on what we have now, my only assumption is that it works normally only on AMD discrete GPUs. Unfortunately, I cannot verify this assumption.
Comment 20 Nate Graham 2025-11-03 16:29:30 UTC
FWIW I've got an AMD *integrated* GPU and don't see any problems.
Comment 21 kocandrlev 2025-11-03 17:03:34 UTC
(In reply to evgeniyharchenko.dev from comment #19)
> Ok, based on what we have now, my only assumption is that it works normally
> only on AMD discrete GPUs. Unfortunately, I cannot verify this assumption.

I have the same issue and I have AMD discrete GPU.

Monitors: 2
 0: +*DP-3 2560/597x1440/337+0+0  DP-3
 1: +HDMI-A-1 1920/160x1080/90+2560+360  HDMI-A-1

Operating System: Fedora Linux 42
KDE Plasma Version: 6.5.1
KDE Frameworks Version: 6.19.0
Qt Version: 6.9.3
Kernel Version: 6.17.5-200.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 5700X 8-Core Processor
Memory: 32 GiB of RAM (31,3 GiB usable)
Graphics Processor: AMD Radeon RX 6700 XT
Manufacturer: Gigabyte Technology Co., Ltd.
Product Name: B550 GAMING X V2
System Version: -CF
Comment 22 Nate Graham 2025-11-04 19:01:00 UTC
*** Bug 507392 has been marked as a duplicate of this bug. ***
Comment 23 Luan Vitor Simião Oliveira 2025-11-05 11:09:41 UTC
also seeing this on my secondary monitor, the bug goes away when i add an empty panel to it.
although it comes back if i remove it then logout/log back in

Operating System: Fedora Linux 43
KDE Plasma Version: 6.5.1
KDE Frameworks Version: 6.19.0
Qt Version: 6.10.0
Kernel Version: 6.17.6-300.fc43.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 9800X3D 8-Core Processor
Memory: 32 GiB of RAM (30.5 GiB usable)
Graphics Processor 1: NVIDIA GeForce RTX 4070 Ti SUPER
Graphics Processor 2: AMD Ryzen 7 9800X3D 8-Core Processor
Manufacturer: ASUS
Comment 24 Akseli Lahtinen 2025-11-05 15:08:18 UTC
(In reply to Geraldo Simião from comment #18)
> Created attachment 186460 [details]
> Screenshot from primary and second monitor
> 
> I don't know if this is related to this bug here, but when clicking with the
> right mouse button at the desktop, at primary and second monitor, it shows
> different menus.

Seems what happens is:
- Folderview fails to load
- Folderview does not even start loading
- Some other thing where different monitors suddenly have different settings? (I hope not..)

Either way, will investigate. Thanks for the feedback everyone, and if you spot any potentially related warnings in journalctl (usually named after something like desktopcontainment like in the starter post) , let us know!
Comment 25 evgeniyharchenko.dev 2025-11-05 15:32:22 UTC
> let us know!
What about this? https://bugs.kde.org/show_bug.cgi?id=511131#c9
Comment 26 Bug Janitor Service 2025-11-06 10:06:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5971
Comment 27 Akseli Lahtinen 2025-11-06 10:16:37 UTC
(In reply to evgeniyharchenko.dev from comment #25)
> > let us know!
> What about this? https://bugs.kde.org/show_bug.cgi?id=511131#c9

Yup thanks, it helped us find the bug. You were on the right track. :)
Comment 28 Marco Martin 2025-11-06 12:27:46 UTC
Git commit 728f0a7da82a7ef11321cd1cc5f3f90da8df0c56 by Marco Martin.
Committed on 06/11/2025 at 12:27.
Pushed by mart into branch 'master'.

ShellCorona: ensure screenUiReadyChanged happens for screens without panels

right now screenUiReadyChanged was only emitted when all the panels are loaded \
this means that screens without panels won't ever emit this, even tough \
they are the first one to get ready. \
Emit the signal for all screens that are already ready in checkAllDesktopsUiReady() \
     \

M  +8    -0    shell/shellcorona.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/728f0a7da82a7ef11321cd1cc5f3f90da8df0c56
Comment 29 Marco Martin 2025-11-06 12:31:04 UTC
Git commit 11d26044e64aa41a271ba1d09258e046e7149d71 by Marco Martin.
Committed on 06/11/2025 at 12:30.
Pushed by mart into branch 'Plasma/6.5'.

ShellCorona: ensure screenUiReadyChanged happens for screens without panels

right now screenUiReadyChanged was only emitted when all the panels are loaded this means that screens without panels won't ever emit this, even tough they are the first one to get ready.

Emit the signal for all screens that are already ready in checkAllDesktopsUiReady() 

M  +8    -0    shell/shellcorona.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/11d26044e64aa41a271ba1d09258e046e7149d71
Comment 30 evgeniyharchenko.dev 2025-11-06 13:02:02 UTC
The main bug has been fixed, but the fix introduced a new problem. Now the icon positions are no longer saved. All icons jump to the secondary screen after restarting plasmashell. Tested on latest Unstable Edition
Comment 31 Akseli Lahtinen 2025-11-06 14:24:13 UTC
(In reply to evgeniyharchenko.dev from comment #30)
> The main bug has been fixed, but the fix introduced a new problem. Now the
> icon positions are no longer saved. All icons jump to the secondary screen
> after restarting plasmashell. Tested on latest Unstable Edition

Since this is different bug, can you make a new report for it? To keep things organized.
Comment 32 David Edmundson 2025-11-06 16:32:58 UTC
*** Bug 511662 has been marked as a duplicate of this bug. ***
Comment 33 David Edmundson 2025-11-06 16:33:44 UTC
*** Bug 511719 has been marked as a duplicate of this bug. ***
Comment 34 Delio Sampaio 2025-11-19 11:22:58 UTC
(In reply to evgeniyharchenko.dev from comment #30)
> The main bug has been fixed, but the fix introduced a new problem. Now the
> icon positions are no longer saved. All icons jump to the secondary screen
> after restarting plasmashell. Tested on latest Unstable Edition

I can confirm this behaviour, since last KDE update.

No matter what I do, if I logout / kill plasma / reboot, all my icons are dragged to monitor 2 (secondary). This secondary monitor is left of the main monitor.

EndeavourOS (Arch Linux)
KDE Plasma 6.5.3 (Wayland)
Radeon RX 9070 XT